<resources>
    <string name="app_name">KARANTIN</string>
    <string name="tv_description">By Ovsiannykov</string>

    <string name="tap_again">Нажмите Назад еще раз для выхода</string>

    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/nureKharkiv/</string>
    <string name="youtube_url">https://www.youtube.com/user/nuretv</string>
    <string name="twitter_user_id">https://twitter.com/knure_ua</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/knure_ua</string>
    <string name="google_plus_url">https://plus.google.com/</string>
    <string name="simptoms_url">https://poboremo.org/info/sympthoms</string>
    <!-- privacy policy url -->
    <string name="privacy_url">https://docs.google.com/document/d/1ZUrFQwbxDTpg_o9UUx9NtH_JtOSmVuZqD2FTLBJ5qno/edit?usp=sharing</string>

    <!-- privacy policy url -->
    <string name="site_url">https://t.me/mikie_mac</string>

    <!-- about developer text  -->
    <string name="developer_name">Ovsiannykov Mykhailo</string>
    <string name="developer_detail">ПЗПИ-16-4</string>
    <string name="developer_message">Программная система по сопровождению и оказанию неотложной медицинской помощи</string>

    <string name="site_menu_share">Поделиться</string>
    <string name="quiz">Тестирование</string>
    <string name="social">Ресурсы</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>

    <string name="others">Others</string>
    <string name="site">ХНУРЭ</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share">Поделиться</string>
    <string name="rate">Оцените приложение</string>
    <string name="settings">Настройки</string>
    <string name="about_dev">О приложении</string>
    <string name="exit">Выход</string>
    <string name="site_menu_delete_all">Удалить все</string>

    <string name="empty_result">Нет данных</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="tapAgain">Нажмите Назад еще раз для выхода!</string>
    <string name="connect">Соединение</string>
    <string name="permission_not_granted">Разрешения не предоставлены!</string>

    <string name="share_text">Установить это приложение:</string>
    <string name="send_to">отправить: </string>

    <string name="close_prompt">Закрыть приложение?</string>
    <string name="delete_all_notification">Удалить все уведомления?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="failed">Ошибка</string>

    <string name="score_card">Результаты</string>
    <string name="score">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="skipped">Пропущено</string>
    <string name="skip_text">Пропустить?</string>
    <string name="skip_prompt">Пропустить этот вопрос?</string>
    <string name="quiz_close_prompt">Закрыть приложение?</string>
    <string name="share_prompt">Здоровья Вам!</string>
    <string name="share_now">Позвонить 103</string>
    <string name="sharing_text" formatted="false">Мой результат %d. - </string>
    <string name="play_again">Начать заново</string>
    <string name="your_ans">Ваш ответ:</string>
    <string name="correct_ans">Верный ответ:</string>

    <string name="details_text">Подробно</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="skipped_text">Вы пропустили этот вопрос</string>
    <string name="item_counter" formatted="false">%d / %d</string>
    <string name="no_internet">Интернет соединение недоступно!</string>
    <string name="welcome_text">Проверьте себя!</string>
    <string name="ready_prompt">Вы готовы?</string>
    <string name="quiz_prompt">Тестирование</string>
    <string name="cancel_prompt">Прекратить тестирование?</string>
    <string name="watch_video_prompt">Посмотрите видео для продолжения теста!</string>
    <string name="reward_dialog_title">Еще один шанс?</string>
    <string name="reward_dialog_message">Получить дополнительную попытку после просмотра видео?</string>

    <string name="greeting_text1">Не стоит паниковать. Обязательно позвоните Вашему лечащему врачу или 103</string>
    <string name="greeting_text2">Не стоит паниковать. Обязательно позвоните Вашему лечащему врачу или 103</string>
    <string name="greeting_text3">Не плохо! Но на всякий случай позвоните Вашему лечащему врачу</string>


    <string name="matches">matches</string>
    <string name="title_post">Уведомление</string>
    <string name="notifications">Уведомления</string>
    <string name="read_post">Нажмите для прочтения</string>
    <string name="notification_title">Заголовок: </string>
    <string name="notification_details">Содержание: </string>


    <string name="pref_notification_title">Настройка уведомлений</string>
    <string name="pref_notification_summ">Включить/выключить уведомления</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_text_title">Размер текста</string>
    <string name="select_size">Выберите размер текста</string>

    <string name="small_text">Маленький</string>
    <string name="default_text">Средний</string>
    <string name="large_text">Большой</string>
    <string name="quiz_promt_third_text">Пройти тест снова?</string>
    <string name="quiz_promt_first_text">Предыдущий результат: %s из 10</string>
    <string name="quiz_question_title">Вопрос %d из %d</string>
    <string name="Simptomps">Симптомы</string>
    <string name="уц">Заказать продукты</string>
    <string name="цу">Статистика Covid-19</string>
    <string name="цуу">Симптомы</string>
    <string name="уццц">Что делать если я зарзился?</string>
    <string name="цццц">Пути заражения</string>

</resources>
